0.1680
    - select, update, and delete where option can receive string where clause
0.1679
    - added EXPERIMENTAL select() wrap option to support Oracle ROWNUM
0.1678
    - DBIx::Custom::Model filter attribute can receive hash reference
    - DBIx::Custom::Where clause attribute can receive clause without column name
    - improved error messages
0.1677
    - improved table search in column and join clause
    - DEPRECATED table tag. use table option.
0.1676
    - fixed test bug
0.1675
    - removed DEPRECATED DBIx::Custom::MySQL and DBIx::Custom::SQLite
      these implementations remine in https://github.com/yuki-kimoto/DBIx-Custom/wiki
      for some users.
    - removed EXPERIMENTAL replace().
    - removed EXPERIMENTAL mark from many methods.
0.1674
    - fixed test bug
0.1673
    - fixed dbh() method bug.
0.1672
    - removed EXPERIMENTAL Prefork server safe implementation, my implementation is very buggy.
    - added EXPERIMETNAL connector() attribute.
    - change retern value to array refrence of EXPERIMENTAL replace()
0,1671
    - added environment variable DBIX_CUSTOM_DEBUG
0.1670
    - removed EXPERIMETNAL select() column hash option. it's a little complex.
    - added EXPERIMENTAL select() param option.
    - added EXPERIMENTAL replace().
0.1669
    - renamed update_param to update_param_tag, update_param is DEPRECATED!
    - renamed insert_param to insert_param_tag, insert_param is DEPRECATED!
0.1668
    - added EXPERIMENTAL update_param no_set option.
    - added EXPERIMENTAL reserved_word_quote attribute.
0.1666
    - removed from cache() and cache_method() document for a while and cache() value
      become 0 because I find something bug.
    - create_model() return model.
    - added document of hash filter
    - adeed EXPERIMENTAL DBIx::Custom::Model method()
0.1665