@@ -2159,7 +2159,7 @@ $dbi->insert(table => 'table1', param => {key1 => 2, key2 => 3});
 $rows = $dbi->select(
     table => 'table1',
     where => '{= key1} and {= key2}',
-    param => {key1 => 1, key2 => 2}
+    where_param => {key1 => 1, key2 => 2}
 )->fetch_hash_all;
 is_deeply($rows, [{key1 => 1, key2 => 2}]);
 
@@ -2171,7 +2171,7 @@ $dbi->insert(table => 'table1', param => {key1 => 2, key2 => 3});
 $dbi->delete(
     table => 'table1',
     where => '{= key1} and {= key2}',
-    param => {key1 => 1, key2 => 2}
+    where_param => {key1 => 1, key2 => 2}
 );
 $rows = $dbi->select(table => 'table1')->fetch_hash_all;
 is_deeply($rows, [{key1 => 2, key2 => 3}]);
@@ -2183,8 +2183,9 @@ $dbi->execute($CREATE_TABLE->{0});
 $dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
 $dbi->update(
     table => 'table1',
-    param => {key1 => [5, 1], key2 => 2},
-    where => '{= key1} and {= key2}'
+    param => {key1 => 5},
+    where => '{= key1} and {= key2}',
+    where_param => {key1 => 1, key2 => 2}
 );
 $rows = $dbi->select(table => 'table1')->fetch_hash_all;
 is_deeply($rows, [{key1 => 5, key2 => 2}]);
